<?xml version="1.0" encoding="utf-8"?>
<!--<menu xmlns:android = "http://schemas.android.com/apk/res/android"-->
    <!--xmlns:app= "http://schemas.android.com/apk/res-auto">-->

    <!--<item android:id="@+id/action_search"-->
        <!--android:title="@string/action_search"-->
        <!--app:actionViewClass="android.support.v7.widget.SearchView"-->
        <!--app:showAsAction="always"/>-->
<!--</menu>-->

<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_gallery"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/menu_gallery" />
        <item
            android:id="@+id/cart"
            android:title="Shops"
            android:icon="@drawable/shope"/>

        <item
            android:id="@+id/nav_tools"
            android:icon="@drawable/ic_menu_manage"
            android:title="@string/menu_tools" />
        <item
            android:id="@+id/nav_help"
            android:title="About"/>
        <item
            android:id="@+id/nav_about"
            android:title="Help?"/>
    </group>

    <item android:title="Communicate">
        <menu>
            <item
                android:id="@+id/nav_share"
                android:icon="@drawable/ic_menu_share"
                android:title="@string/menu_share" />
            <item
                android:id="@+id/nav_send"
                android:icon="@drawable/ic_menu_send"
                android:title="@string/menu_send" />
        </menu>
    </item>

</menu>
